# KinectV1-2SkeletonHand

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLBINDING.cmake  FindOpenNI2.cmake  FindSDL2.cmake
src/: Viewer.cc  Viewer.h  main.cc
